--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,1 @@
-Map COmponents:
-
-0 = Walkable
-w = Wall
-G = Goblin
+A small roguelike template written in C using only the standard libraries. Just done as a small fun challange.
